--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <nav>
             <a href="#" class="active"> الرئيسية</a>
-            <a href="#" >مشروعي</a>
+            <a href="projects.html" >مشروعي</a>
             <a href="#" >المهارات</a>
             <a href="#" >التعليم</a>
             <a href="#" >تواصل معي</a>
@@ -34,4 +34,5 @@
 
     </section>
 </body>
+
 </html>
