--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=El+Messiri:wght@400;700&display=swap" rel="stylesheet">
     <title>Portfolio Website</title>
 </head>
 <body>
     <header>
-        <a href="#" class="logo">قيد الانشاء</a>
+        <a href="#" class="logo">روان خالد</a>
 
         <nav>
             <a href="#" class="active"> الرئيسية</a>
             <a href="projects.html" >مشروعي</a>
-            <a href="#" >المهارات</a>
-            <a href="#" >التعليم</a>
-            <a href="#" >تواصل معي</a>
+            <a href="skills.html" >المهارات</a>
+            <a href="education.html" >التعليم</a>
+            <a href="contact.html" >تواصل معي</a>
         </nav>
     </header>
     <section class="home">
@@ -30,9 +31,6 @@
 </p>
 
         </div>
-            <a href="#" class="btn">Hire me</a>
-
     </section>
 </body>
-
 </html>
