--- a/projects.html
+++ b/projects.html
@@ -4,62 +4,106 @@
   <meta charset="UTF-8">
   <title>مشروع تخرجي</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=El+Messiri:wght@400;700&display=swap" rel="stylesheet">
+
   <style>
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: 'Poppins', sans-serif;
+      font-family: 'El Messiri', sans-serif;
+    }
+
+    html, body {
+      height: 100%;
+      background-color: black;
+      color: white;
+      overflow: hidden; /* يمنع السكروول */
     }
 
     body {
-      background-color: black;
-      color: white;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 1rem;
       text-align: center;
-      padding: 4rem 2rem;
     }
 
     h3 {
-      font-size: 4rem;
-      color: #b74b4b;
-      margin-bottom: 3rem;
+      font-size: 2.8rem;
+      color: rgba(141, 54, 100, 0.868);
+      margin-bottom: 1.5rem;
     }
 
     .video-container {
-      position: relative;
-      max-width: 800px;
-      margin: 0 auto;
-      border: 4px solid #b74b4b;
+      width: 95%;
+      max-width: 700px;
+      aspect-ratio: 16 / 9;
+      box-shadow: 0 0 20px rgba(141, 54, 100, 0.868);
       border-radius: 15px;
       overflow: hidden;
-      box-shadow: 0 0 25px #b74b4b;
     }
 
-    video {
+    .video-container iframe {
       width: 100%;
-      height: auto;
+      height: 100%;
+      border: none;
+      border-radius: 15px;
       display: block;
     }
 
+    .back-button {
+      position: fixed;
+      top: 15px;
+      left: 15px;
+      background-color: rgba(141, 54, 100, 0.9);
+      color: white;
+      border: none;
+      border-radius: 50%;
+      width: 45px;
+      height: 45px;
+      font-size: 1.5rem;
+      cursor: pointer;
+      box-shadow: 0 0 10px rgba(141, 54, 100, 0.7);
+      z-index: 100;
+    }
+
+    .back-button:hover {
+      background-color: white;
+      color: rgba(141, 54, 100, 0.9);
+    }
+
     @media (max-width: 768px) {
-      h1 {
-        font-size: 3rem;
+      h3 {
+        font-size: 2.2rem;
       }
-      .video-container {
-        max-width: 100%;
+
+      .back-button {
+        width: 40px;
+        height: 40px;
+        font-size: 1.3rem;
       }
     }
   </style>
 </head>
 <body>
 
+  <button class="back-button" onclick="window.location.href='index.html'">
+    <i class="fas fa-undo-alt"></i>
+  </button>
+
   <h3>مشروع تخرجي</h3>
 
   <div class="video-container">
-    <video controls>
-      <source src="codevcode.mp4" type="video/mp4">
-      المتصفح لا يدعم تشغيل الفيديو.
-    </video>
+    <iframe 
+      src="https://www.youtube.com/embed/WHDONf5SJBA" 
+      title="مشروع تخرجي"
+      frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+      allowfullscreen>
+    </iframe>
   </div>
 
 </body>
